<resources>
    <string name="app_name">Vorgol</string>
    <string name="title_height">50dp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_main_fragment">HELLO</string>
    <string name="sector">Sector</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="SectorA">Sector A</string>
    <string name="SectorB">Sector B</string>
    <string name="SectorC">Sector C</string>
    <string name="SectorD">Sector D</string>
    <string name="title">Title</string>
    <string name="contex">Contex</string>
</resources>